add error handling (in case of audio errors skip to next file)

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,10 @@
 
 [env:SDPlayer]
 platform = espressif32
-board = esp32dev
+;board = esp32dev
+board = esp32doit-devkit-v1
 framework = arduino
+;board_build.f_cpu = 240000000L
 build_flags =
   	;-Wno-unused-variable
 	;-Wno-unused-but-set-variable
@@ -23,5 +25,5 @@ monitor_flags =
 monitor_filters = esp32_exception_decoder
 monitor_speed = 115200
 upload_speed = 921600
-monitor_port = COM9
-upload_port = COM9
+monitor_port = COM15
+upload_port = COM15
