--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,8 @@ platform = espressif32
 ;board = esp32dev
 board = esp32doit-devkit-v1
 framework = arduino
+;platform_packages =
+;    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 ;board_build.f_cpu = 240000000L
 build_flags =
   	;-Wno-unused-variable
